# compiler-Moviestore

./: Jenkinsfile  LICENSE  Moviestore.cabal  README.md
app/: Main.hs
src/: Movie.hs  Moviestore.hs
test/: MovieSpec.hs  MoviestoreSpec.hs
