name:                Moviestore
version:             0.1.0.0
synopsis:            A simple fragment for a movie store
description:         see README
homepage:            https://github.com/ob-cs-hm-edu/compiler-Moviestore#readme
license:             BSD3
license-file:        LICENSE
author:              Oliver Braun
maintainer:          ob@cs.hm.edu
copyright:           2017 Oliver Braun
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Movie
                     , Moviestore
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable Moviestore
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Moviestore
  default-language:    Haskell2010

test-suite Moviestore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       MovieSpec
                     , MoviestoreSpec
  build-depends:       base
                     , hspec
                     , QuickCheck
                     , Moviestore
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ob-cs-hm-edu/compiler-Moviestore
